<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/tickets_page_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="40dp"
            android:text="@string/tickets_page_title"
            android:textColor="#fff"
            android:textSize="28sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#f00" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/events"
            android:id="@+id/events" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:background="@drawable/left_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_background_white_30"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tickets_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/tickets_title"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tickets_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="26dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="26dp"
                    android:text="@string/tickets_description"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:clickable="true" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:background="@drawable/left_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_background_white_30"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tickets_one_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/tickets_one_title"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tickets_one_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="26dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="26dp"
                    android:text="@string/tickets_one_description"
                    android:textColor="#fff"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:background="@drawable/left_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_background_white_30"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tickets_two_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/tickets_two_title"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tickets_two_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="26dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="26dp"
                    android:text="@string/tickets_two_description"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:clickable="true" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:background="@drawable/left_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_background_white_30"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tickets_three_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/tickets_three_title"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tickets_three_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="26dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="26dp"
                    android:text="@string/tickets_three_description"
                    android:textColor="#fff"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_background_white_30"
                android:orientation="vertical" >

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_background_white_30"
                android:orientation="vertical" >

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_background_white_30"
                android:orientation="vertical" >

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_background_white_30"
                android:orientation="vertical" >

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_background_white_30"
                android:orientation="vertical" >

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:background="@drawable/left_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_background_white_30"
                android:orientation="vertical" >

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>